crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__sup-command-arg.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..8
  scripts Auto @0..8
    run "e" @0..1
    sup:
      sym "α" @2..8
-- problems --
