crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__scripts__sup-then-space-sub.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..15
  scripts Auto @0..15
    row @0..8
      scripts Auto @0..7
        run "E" @0..1
        sup:
          sym "∘" @2..7
    sub:
      row @9..15
        run "cell" @10..14
-- problems --
